--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,32 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - ca-certificates=2019.9.11=hecc5488_0
-  - certifi=2019.9.11=py38_0
+  - appdirs=1.4.3=py_1
+  - astroid=2.3.3=py38_0
+  - attrs=19.3.0=py_0
+  - backcall=0.1.0=py_0
+  - black=19.10b0=py38_0
+  - bleach=3.1.0=py_0
+  - ca-certificates=2019.11.28=hecc5488_0
+  - certifi=2019.11.28=py38_0
+  - click=7.0=py_0
+  - decorator=4.4.1=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py38_1000
+  - importlib_metadata=1.3.0=py38_0
+  - ipykernel=5.1.3=py38h5ca1d4c_0
+  - ipython=7.11.1=py38h5ca1d4c_0
+  - ipython_genutils=0.2.0=py_1
+  - isort=4.3.21=py38_0
+  - jedi=0.15.2=py38_0
+  - jinja2=2.10.3=py_0
+  - json5=0.8.5=py_0
+  - jsonschema=3.2.0=py38_0
+  - jupyter_client=5.3.3=py38_1
+  - jupyter_core=4.6.1=py38_0
+  - jupyterlab=1.2.4=py_0
+  - jupyterlab_server=1.0.6=py_0
+  - lazy-object-proxy=1.4.3=py38h516909a_0
   - libblas=3.8.0=14_openblas
   - libcblas=3.8.0=14_openblas
   - libffi=3.2.1=he1b5a44_1006
@@ -13,22 +37,65 @@ dependencies:
   - libgfortran-ng=7.3.0=hdf63c60_2
   - liblapack=3.8.0=14_openblas
   - libopenblas=0.3.7=h6e990d7_3
+  - libsodium=1.0.17=h516909a_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
+  - markupsafe=1.1.1=py38h516909a_0
+  - mccabe=0.6.1=py_1
+  - mistune=0.8.4=py38h516909a_1000
+  - more-itertools=8.0.2=py_0
+  - mypy_extensions=0.4.3=py38_0
+  - nbconvert=5.6.1=py38_0
+  - nbformat=4.4.0=py_1
   - ncurses=6.1=hf484d3e_1002
+  - notebook=6.0.1=py38_0
   - numpy=1.17.3=py38h95a1406_0
-  - openssl=1.1.1c=h516909a_0
+  - openssl=1.1.1d=h516909a_0
   - pandas=0.25.3=py38hb3f55d8_0
+  - pandoc=2.9.1=0
+  - pandocfilters=1.4.2=py_1
+  - parso=0.5.2=py_0
+  - pathspec=0.7.0=py_0
+  - pexpect=4.7.0=py38_0
+  - pickleshare=0.7.5=py38_1000
   - pip=19.3.1=py38_0
+  - prometheus_client=0.7.1=py_0
+  - prompt_toolkit=3.0.2=py_0
+  - ptyprocess=0.6.0=py_1001
+  - pygments=2.5.2=py_0
+  - pylint=2.4.4=py38_0
+  - pyrsistent=0.15.6=py38h516909a_0
   - python=3.8.0=h357f687_2
   - python-dateutil=2.8.1=py_0
+  - python-dotenv=0.10.3=py_0
   - pytz=2019.3=py_0
+  - pyzmq=18.1.1=py38h1768529_0
   - readline=8.0=hf8c457e_0
+  - regex=2019.12.20=py38h516909a_0
+  - send2trash=1.5.0=py_0
   - setuptools=41.6.0=py38_1
   - six=1.13.0=py38_0
   - sqlite=3.30.1=hcee41ef_0
+  - terminado=0.8.3=py38_0
+  - testpath=0.4.4=py_0
   - tk=8.6.9=hed695b0_1003
+  - toml=0.10.0=py_0
+  - tornado=6.0.3=py38h516909a_0
+  - traitlets=4.3.3=py38_0
+  - typed-ast=1.4.0=py38h516909a_0
+  - typing_extensions=3.7.4.1=py38_0
+  - wcwidth=0.1.8=py_0
+  - webencodings=0.5.1=py_1
   - wheel=0.33.6=py38_0
+  - wrapt=1.11.2=py38h516909a_0
   - xz=5.2.4=h14c3975_1001
+  - zeromq=4.3.2=he1b5a44_2
+  - zipp=0.6.0=py_0
   - zlib=1.2.11=h516909a_1006
+  - pip:
+    - chardet==3.0.4
+    - idna==2.8
+    - newsapi-python==0.2.6
+    - requests==2.22.0
+    - urllib3==1.25.7
 prefix: /home/will/anaconda3/envs/headliner
 
