--- a/environment.yml
+++ b/environment.yml
@@ -1,154 +1,13 @@
 name: headliner
 channels:
-  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
-  - appdirs=1.4.3=py_1
-  - argon2-cffi=20.1.0=py38h1e0a361_1
-  - astroid=2.3.3=py38_1
-  - attrs=20.1.0=pyh9f0ad1d_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.1=py_0
-  - black=19.10b0=py38_0
-  - bleach=3.1.5=pyh9f0ad1d_0
-  - bokeh=2.2.0=py38h32f6830_0
-  - brotlipy=0.7.0=py38h1e0a361_1000
-  - bzip2=1.0.8=h516909a_3
-  - c-ares=1.16.1=h516909a_3
-  - ca-certificates=2020.7.22=0
-  - certifi=2020.6.20=py38h32f6830_0
-  - cffi=1.14.1=py38h5bae8af_0
-  - chardet=3.0.4=py38h32f6830_1006
-  - click=7.1.2=pyh9f0ad1d_0
-  - conda=4.8.4=py38h32f6830_2
-  - conda-package-handling=1.7.0=py38h1e0a361_4
-  - cryptography=3.1=py38h766eaa4_0
-  - cycler=0.10.0=py_2
-  - decorator=4.4.2=py_0
-  - defusedxml=0.6.0=py_0
-  - entrypoints=0.3=py38h32f6830_1001
-  - freetype=2.10.2=he06d7ca_0
-  - icu=67.1=he1b5a44_0
-  - importlib-metadata=1.7.0=py38h32f6830_0
-  - importlib_metadata=1.7.0=0
-  - ipykernel=5.3.4=py38h23f93f0_0
-  - ipython=7.18.1=py38h1cdfbd6_0
-  - ipython_genutils=0.2.0=py_1
-  - isort=4.3.21=py38h32f6830_1
-  - jedi=0.17.2=py38h32f6830_0
-  - jinja2=2.11.2=pyh9f0ad1d_0
-  - jpeg=9d=h516909a_0
-  - json5=0.9.4=pyh9f0ad1d_0
-  - jsonschema=3.2.0=py38h32f6830_1
-  - jupyter_client=6.1.7=py_0
-  - jupyter_core=4.6.3=py38h32f6830_1
-  - jupyterlab=2.2.6=py_0
-  - jupyterlab_server=1.2.0=py_0
-  - kiwisolver=1.2.0=py38hbf85e49_0
-  - krb5=1.17.1=hfafb76e_3
-  - lazy-object-proxy=1.5.1=py38h1e0a361_0
-  - lcms2=2.11=hbd6801e_0
-  - ld_impl_linux-64=2.34=hc38a660_9
-  - libarchive=3.3.3=hddc7a2b_1008
-  - libblas=3.8.0=17_openblas
-  - libcblas=3.8.0=17_openblas
-  - libcurl=7.71.1=hcdd3856_5
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.3.0=h24d8f2e_16
-  - libgfortran-ng=7.5.0=hdf63c60_16
-  - libgomp=9.3.0=h24d8f2e_16
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.8.0=17_openblas
-  - libnghttp2=1.41.0=h8cfc5f6_2
-  - libopenblas=0.3.10=pthreads_hb3c22a3_4
-  - libpng=1.6.37=hed695b0_2
-  - libsodium=1.0.18=h516909a_0
-  - libsolv=0.7.14=h8b12597_5
-  - libssh2=1.9.0=hab1572f_5
-  - libstdcxx-ng=9.3.0=hdf63c60_16
-  - libtiff=4.1.0=hc7e4089_6
-  - libwebp-base=1.1.0=h516909a_3
-  - libxml2=2.9.10=h68273f3_2
-  - lz4-c=1.9.2=he1b5a44_3
-  - lzo=2.10=h516909a_1000
-  - mamba=0.5.1=py38h6fd9b40_0
-  - markupsafe=1.1.1=py38h1e0a361_1
-  - matplotlib-base=3.3.1=py38h91b0d89_1
-  - mccabe=0.6.1=py_1
-  - mistune=0.8.4=py38h1e0a361_1001
-  - multidict=4.7.5=py38h1e0a361_1
-  - mypy_extensions=0.4.3=py38h32f6830_1
-  - nbconvert=5.6.1=py38h32f6830_1
-  - nbformat=5.0.7=py_0
-  - ncurses=6.2=he1b5a44_1
-  - notebook=6.1.3=py38h32f6830_0
-  - numpy=1.19.1=py38hbc27379_2
-  - olefile=0.46=py_0
-  - openssl=1.1.1g=h516909a_1
-  - packaging=20.4=pyh9f0ad1d_0
-  - pandas=1.1.0=py38h950e882_0
-  - pandoc=2.10.1=h516909a_0
-  - pandocfilters=1.4.2=py_1
-  - parso=0.7.1=pyh9f0ad1d_0
-  - pathspec=0.8.0=pyh9f0ad1d_0
-  - pexpect=4.8.0=py38h32f6830_1
-  - pickleshare=0.7.5=py38h32f6830_1001
-  - pillow=7.2.0=py38h9776b28_1
-  - pip=20.2.2=py_0
-  - prometheus_client=0.8.0=pyh9f0ad1d_0
-  - prompt-toolkit=3.0.7=py_0
-  - ptyprocess=0.6.0=py_1001
-  - pycosat=0.6.3=py38h1e0a361_1004
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pygments=2.6.1=py_0
-  - pylint=2.4.4=py38_0
-  - pyopenssl=19.1.0=py_1
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyrsistent=0.16.0=py38h1e0a361_0
-  - pysocks=1.7.1=py38h32f6830_1
-  - python=3.8.5=h1103e12_7_cpython
-  - python-dateutil=2.8.1=py_0
-  - python-dotenv=0.10.3=py_0
-  - python_abi=3.8=1_cp38
-  - pytz=2020.1=pyh9f0ad1d_0
-  - pyyaml=5.3.1=py38h1e0a361_0
-  - pyzmq=19.0.2=py38ha71036d_0
-  - readline=8.0=he28a2e2_2
-  - regex=2020.7.14=py38h1e0a361_0
-  - ruamel_yaml=0.15.80=py38h1e0a361_1002
-  - send2trash=1.5.0=py_0
-  - setuptools=49.6.0=py38h32f6830_0
-  - six=1.15.0=pyh9f0ad1d_0
-  - sqlite=3.33.0=h4cf870e_0
-  - terminado=0.8.3=py38h32f6830_1
-  - testpath=0.4.4=py_0
-  - tk=8.6.10=hed695b0_0
-  - toml=0.10.1=pyh9f0ad1d_0
-  - tornado=6.0.4=py38h1e0a361_1
-  - tqdm=4.48.2=pyh9f0ad1d_0
-  - traitlets=5.0.0=py38h32f6830_0
-  - typed-ast=1.4.1=py38h516909a_0
-  - typing_extensions=3.7.4.2=py_0
-  - wcwidth=0.2.5=pyh9f0ad1d_1
-  - webencodings=0.5.1=py_1
-  - wheel=0.35.1=pyh9f0ad1d_0
-  - wordcloud=1.8.0=py38h1e0a361_0
-  - wrapt=1.12.1=py38h1e0a361_1
-  - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h516909a_0
-  - zeromq=4.3.2=he1b5a44_3
-  - zipp=3.1.0=py_0
-  - zlib=1.2.11=h516909a_1009
-  - zstd=1.4.5=h6597ccf_2
-  - pip:
-    - idna==2.8
-    - newsapi-python==0.2.6
-    - requests==2.22.0
-    - urllib3==1.25.7
-    - yanytapi==2.0.0
-prefix: /home/will/miniconda3/envs/headliner
+  - jupyter
+  - python=3.10
+  - numpy
+  - matplotlib
+  - pandas
+  - tqdm
+  - bokeh
+  - mamba
+prefix: /Users/wckoeppen/miniconda3/envs/headliner
